Fixes to stabilize

--- a/src/develop.html
+++ b/src/develop.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/leaflet-sidebar.css" />
   <link rel="stylesheet" href="css/L.VisualClick.css" />
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <!-- Main tangram library. NEVER use a different name than tangram.min.js or tangram.debug.js -->
   <script src="lib/tangram.min.js"></script>
