--- a/src/relief.html
+++ b/src/relief.html
@@ -12,11 +12,9 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <!-- Main tangram library. NEVER use a different name than tangram.min.js or tangram.debug.js -->
-  <script src="lib/tangram.min.js"></script>
+  <script src="app/tangram53/tangram.min.js"></script>
 
-  <script src="scenes/architecturalstyles.js"></script>
-  <script data-main="appdev" src="js/require.js"></script>
-
+  <script data-main="apprelief" src="js/require.js"></script>
 
     <!-- Adding a script block to post message to the parent container (think iframed demos) -->
     <script type="text/javascript">
@@ -34,7 +32,7 @@
  <!-- The leaflet map -->
   <div id="map" class="sidebar-map"></div>
     <!-- Piwik -->
-    <script type="text/javascript">
+<!--    <script type="text/javascript">
       var _paq = _paq || [];
       _paq.push(["setDomains", ["*.maps.mountbatten.nl"]]);
       _paq.push(['trackPageView']);
@@ -48,6 +46,6 @@
       })();
     </script>
     <noscript><p><img src="//piwik.mountbatten.net/piwik.php?idsite=35" style="border:0;" alt="" /></p></noscript>
-    <!-- End Piwik Code -->
+-->    <!-- End Piwik Code -->
 </body>
 </html>
