Far too big commit with pretty stable version. Main thing is multi-lingual and scenes are now external

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>The Other Maps Project</title>
+  <script src="lib/pace.min.js"></script>
+  <link href="css/pace-theme-center-simple.css" rel="stylesheet" />
+
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="css/output.css" />
   <link rel="stylesheet" href="css/leaflet.css" />
@@ -10,7 +13,7 @@
   <link rel="stylesheet" href="css/L.VisualClick.css" />
 
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <!-- Main tangram library. NEVER use a different name than tangram.min.js or tangram.debug.js -->
   <script src="lib/tangram.min.js"></script>
 
