--- a/src/local.html
+++ b/src/local.html
@@ -15,9 +15,7 @@
   <link href='https://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <!-- Main tangram library. NEVER use a different name than tangram.min.js or tangram.debug.js -->
   <script src="lib/tangram.min.js"></script>
-
-  <script data-main="appdev" src="js/require.js"></script>
-
+  <script data-main="applocal" src="js/require.js"></script>
 
     <!-- Adding a script block to post message to the parent container (think iframed demos) -->
     <script type="text/javascript">
